# openAPI.yaml
@@ -126,17 +126,6 @@ paths:
         500:
           description: server error
   /auditlogs:
-    get:
-      operationId: getAuditLogs
-      responses:
-        200:
-          description:  OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/AuditLogDTO"
     post:
       operationId: createAuditLog
       requestBody:
@@ -152,6 +141,24 @@ paths:
           description: Konnektor not found
         500:
           description: Server error
+  /auditlogs/{auditlogId}:
+    parameters:
+      - name: auditlogId
+        in: path
+        required: true
+        schema:
+          type: string
+    get:
+      operationId: getAuditLogs
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/AuditLogDTO"
     put:
       operationId: updateAuditlog
       summary: Update the complete auditlog
